# serializer version: 1
# name: test_sensors[sensor.transmission_active_torrents-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.transmission_active_torrents',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Active torrents',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Active torrents',
    'platform': 'transmission',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'active_torrents',
    'unique_id': '01J0BC4QM2YBRP6H5G933AETT7-active_torrents',
    'unit_of_measurement': 'torrents',
  })
# ---
# name: test_sensors[sensor.transmission_active_torrents-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Transmission Active torrents',
      'torrent_info': dict({
      }),
      'unit_of_measurement': 'torrents',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.transmission_active_torrents',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[sensor.transmission_completed_torrents-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.transmission_completed_torrents',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Completed torrents',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Completed torrents',
    'platform': 'transmission',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'completed_torrents',
    'unique_id': '01J0BC4QM2YBRP6H5G933AETT7-completed_torrents',
    'unit_of_measurement': 'torrents',
  })
# ---
# name: test_sensors[sensor.transmission_completed_torrents-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Transmission Completed torrents',
      'torrent_info': dict({
      }),
      'unit_of_measurement': 'torrents',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.transmission_completed_torrents',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[sensor.transmission_download_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.transmission_download_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Download speed',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfDataRate.MEGABYTES_PER_SECOND: 'MB/s'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_RATE: 'data_rate'>,
    'original_icon': None,
    'original_name': 'Download speed',
    'platform': 'transmission',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'download_speed',
    'unique_id': '01J0BC4QM2YBRP6H5G933AETT7-download',
    'unit_of_measurement': <UnitOfDataRate.MEGABYTES_PER_SECOND: 'MB/s'>,
  })
# ---
# name: test_sensors[sensor.transmission_download_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_rate',
      'friendly_name': 'Transmission Download speed',
      'unit_of_measurement': <UnitOfDataRate.MEGABYTES_PER_SECOND: 'MB/s'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.transmission_download_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1e-06',
  })
# ---
# name: test_sensors[sensor.transmission_paused_torrents-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.transmission_paused_torrents',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Paused torrents',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Paused torrents',
    'platform': 'transmission',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'paused_torrents',
    'unique_id': '01J0BC4QM2YBRP6H5G933AETT7-paused_torrents',
    'unit_of_measurement': 'torrents',
  })
# ---
# name: test_sensors[sensor.transmission_paused_torrents-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Transmission Paused torrents',
      'torrent_info': dict({
      }),
      'unit_of_measurement': 'torrents',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.transmission_paused_torrents',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[sensor.transmission_started_torrents-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.transmission_started_torrents',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Started torrents',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Started torrents',
    'platform': 'transmission',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'started_torrents',
    'unique_id': '01J0BC4QM2YBRP6H5G933AETT7-started_torrents',
    'unit_of_measurement': 'torrents',
  })
# ---
# name: test_sensors[sensor.transmission_started_torrents-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Transmission Started torrents',
      'torrent_info': dict({
      }),
      'unit_of_measurement': 'torrents',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.transmission_started_torrents',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[sensor.transmission_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'idle',
        'up_down',
        'seeding',
        'downloading',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.transmission_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Status',
    'platform': 'transmission',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'transmission_status',
    'unique_id': '01J0BC4QM2YBRP6H5G933AETT7-status',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.transmission_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Transmission Status',
      'options': list([
        'idle',
        'up_down',
        'seeding',
        'downloading',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.transmission_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'up_down',
  })
# ---
# name: test_sensors[sensor.transmission_total_torrents-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.transmission_total_torrents',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Total torrents',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Total torrents',
    'platform': 'transmission',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'total_torrents',
    'unique_id': '01J0BC4QM2YBRP6H5G933AETT7-total_torrents',
    'unit_of_measurement': 'torrents',
  })
# ---
# name: test_sensors[sensor.transmission_total_torrents-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Transmission Total torrents',
      'torrent_info': dict({
      }),
      'unit_of_measurement': 'torrents',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.transmission_total_torrents',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[sensor.transmission_upload_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.transmission_upload_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Upload speed',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfDataRate.MEGABYTES_PER_SECOND: 'MB/s'>,
      }),
    }),
    'original_device_class': <SensorDeviceClass.DATA_RATE: 'data_rate'>,
    'original_icon': None,
    'original_name': 'Upload speed',
    'platform': 'transmission',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'upload_speed',
    'unique_id': '01J0BC4QM2YBRP6H5G933AETT7-upload',
    'unit_of_measurement': <UnitOfDataRate.MEGABYTES_PER_SECOND: 'MB/s'>,
  })
# ---
# name: test_sensors[sensor.transmission_upload_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'data_rate',
      'friendly_name': 'Transmission Upload speed',
      'unit_of_measurement': <UnitOfDataRate.MEGABYTES_PER_SECOND: 'MB/s'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.transmission_upload_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1e-06',
  })
# ---
